--- a/flatland_demo/config/robots.yml
+++ b/flatland_demo/config/robots.yml
@@ -1,24 +1,18 @@
 poses:
+  # Top-left
   - {x: -8, y: 3.5, theta: -1.57}
-  - {x: -7.5, y: 3.5, theta: -1.57}
   - {x: -7, y: 3.5, theta: -1.57}
-  - {x: -6.5, y: 3.5, theta: -1.57}
-  - {x: -6, y: 3.5, theta: -1.57}
+  # Midle top
   - {x: 2, y: 1.5, theta: -1.57}
-  - {x: 2.5, y: 1.5, theta: -1.57}
-  - {x: 3, y: 1.5, theta: -1.57}
-  - {x: 3.5, y: 1.5, theta: -1.57}
   - {x: 4, y: 1.5, theta: -1.57}
-  - {x: 4.5, y: 1.5, theta: -1.57}
+  # Bottom-left
   - {x: -8, y: -5, theta: 0}
-  - {x: -7, y: -5, theta: 0}
   - {x: -6, y: -5, theta: 0}
-  - {x: -5, y: -5, theta: 0}
   - {x: -4, y: -5, theta: 0}
-  - {x: -3, y: -5.5, theta: 0}
+  # Top-right
   - {x: 9, y: 2, theta: 3.14}
-  - {x: 10, y: 2, theta: 3.14}
   - {x: 11, y: 2.0, theta: 3.14}
-  - {x: 12, y: 2.0, theta: 3.14}
   - {x: 13, y: 2, theta: 3.14}
-  - {x: 8, y: 2, theta: 3.14}
+  # Bottom-right
+  - {x: 9, y: -1, theta: 1.57}
+  - {x: 12, y: -5.5, theta: 2.32}
